force-app/main/default/objects/redwing__Task_Approver__c/redwing__Task_Approver__c.object-meta.xml
<CustomObject>
    <label>Task Approver</label>
    <nameField>
        <displayFormat>TAP-{0000000}</displayFormat>
        <label>Task Approver ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Approvers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>