force-app/main/default/objects/redwing__Task_Approver__c/fields/redwing__Approver__c.field-meta.xml
<CustomField>
    <fullName>redwing__Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approver</label>
    <type>Checkbox</type>
</CustomField>