force-app/main/default/objects/redwing__Task_Approver__c/fields/redwing__Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__Object_API_Name__c</fullName>
    <label>Object API Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Profile</fullName>
            </value>
            <value>
                <fullName>UserRole</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>