force-app/main/default/objects/redwing__Task_Approver__c/fields/redwing__Object_Id__c.field-meta.xml
<CustomField>
    <fullName>redwing__Object_Id__c</fullName>
    <label>Object Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>