force-app/main/default/objects/redwing__Task_Approver__c/fields/redwing__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>redwing__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>