force-app/main/default/objects/redwing__Task_Approver__c/fields/redwing__Task__c.field-meta.xml
<CustomField>
    <fullName>redwing__Task__c</fullName>
    <label>Task</label>
    <referenceTo>redwing__Task__c</referenceTo>
    <relationshipLabel>Task Approvers</relationshipLabel>
    <relationshipName>Task_Approvers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>