force-app/main/default/objects/redwing__Task_Approver__c/fields/redwing__User__c.field-meta.xml
<CustomField>
    <fullName>redwing__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Task_Approvers</relationshipName>
    <type>Lookup</type>
</CustomField>